--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,3 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="shareButtonColor">#30AADD</color>
+    <color name="shareNextColor">#00FFC6</color>
 </resources>
